--- a/source/sass/blocks/profile-form.scss
+++ b/source/sass/blocks/profile-form.scss
@@ -25,7 +25,7 @@
   border: none;
 
   @include md-size() {
-    margin-bottom: 44px;
+    margin-bottom: 42px;
     padding-top: 27px;
     padding-bottom: 30px;
   }
